[gd_scene load_steps=68 format=3 uid="uid://bcgegtsnnb4gq"]

[ext_resource type="Script" uid="uid://bb2ufopx6shlm" path="res://Scripts/PlayerScript.gd" id="1_6nwty"]
[ext_resource type="Texture2D" uid="uid://duwhh3t7s24br" path="res://Images/Del Rato/Del Rato Idle.png" id="2_tr25n"]
[ext_resource type="Texture2D" uid="uid://cdcodouj5kjcl" path="res://Images/Del Rato/roll shape.png" id="4_sr66r"]
[ext_resource type="Texture2D" uid="uid://4fxukhkdluer" path="res://Images/Jump Animation skeleton-Sheet.png" id="4_tr25n"]
[ext_resource type="Texture2D" uid="uid://bs8hli4fxc2ub" path="res://Images/Del Rato/Del Rato Run Animation Final-Sheet.png" id="5_ea6en"]
[ext_resource type="Texture2D" uid="uid://bc4ehhmc21vdp" path="res://Images/Del Rato/Del Rato iDLE shooting-Sheet.png" id="6_42q41"]
[ext_resource type="Texture2D" uid="uid://b0kh1mt3hd8pn" path="res://Images/Guns/Revolver-Firing.png" id="6_ea6en"]
[ext_resource type="Texture2D" uid="uid://cq4igk4noikq5" path="res://Images/Guns/Revolver Run animation aligned fixed.png" id="7_3q541"]
[ext_resource type="AudioStream" uid="uid://c3quiiboppqsr" path="res://Sounds/gun_shot_1.wav" id="7_tr25n"]
[ext_resource type="PackedScene" uid="uid://cbwm7trydl1lk" path="res://Scenes/Sounds/running_sound.tscn" id="10_d3ngm"]
[ext_resource type="PackedScene" uid="uid://drbobv880ucgu" path="res://Scenes/Sounds/death_sound.tscn" id="11_woajj"]
[ext_resource type="PackedScene" uid="uid://2ta4pvy4bo3m" path="res://Scenes/Sounds/pickup_gun_sound.tscn" id="12_felgn"]
[ext_resource type="PackedScene" uid="uid://dxl8rjtueki1g" path="res://Scenes/Sounds/drop_gun_sound.tscn" id="13_486fw"]
[ext_resource type="PackedScene" uid="uid://08ov83kndi3v" path="res://Scenes/Sounds/jump_sound.tscn" id="14_6bhsc"]
[ext_resource type="PackedScene" uid="uid://ddxr501m3ka70" path="res://Scenes/Sounds/roll_sound.tscn" id="15_sr66r"]
[ext_resource type="PackedScene" uid="uid://ckmucd5np1aua" path="res://Scenes/Sounds/slide_sound.tscn" id="16_g3233"]

[sub_resource type="AtlasTexture" id="AtlasTexture_nxi7d"]
atlas = ExtResource("2_tr25n")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_getkc"]
atlas = ExtResource("4_tr25n")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xbgn5"]
atlas = ExtResource("4_tr25n")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v63vq"]
atlas = ExtResource("4_tr25n")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_eadb6"]
atlas = ExtResource("4_tr25n")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1fc80"]
atlas = ExtResource("4_sr66r")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jibno"]
atlas = ExtResource("4_sr66r")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cdgon"]
atlas = ExtResource("4_sr66r")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_puvcw"]
atlas = ExtResource("4_sr66r")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rakh5"]
atlas = ExtResource("4_sr66r")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y5x6e"]
atlas = ExtResource("4_sr66r")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3q541"]
atlas = ExtResource("5_ea6en")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sr66r"]
atlas = ExtResource("5_ea6en")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g3233"]
atlas = ExtResource("5_ea6en")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yo2nf"]
atlas = ExtResource("5_ea6en")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ky10"]
atlas = ExtResource("5_ea6en")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uc5vr"]
atlas = ExtResource("5_ea6en")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7wvpg"]
atlas = ExtResource("5_ea6en")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x11xb"]
atlas = ExtResource("5_ea6en")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0whdv"]
atlas = ExtResource("5_ea6en")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lkhyi"]
atlas = ExtResource("5_ea6en")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ppufv"]
atlas = ExtResource("5_ea6en")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pa0s6"]
atlas = ExtResource("6_42q41")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_arfus"]
atlas = ExtResource("6_42q41")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s5dpo"]
atlas = ExtResource("6_42q41")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fjnys"]
atlas = ExtResource("6_42q41")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cvgy8"]
atlas = ExtResource("6_42q41")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6r0c2"]
atlas = ExtResource("6_42q41")
region = Rect2(160, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_1fr6y"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nxi7d")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_getkc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xbgn5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v63vq")
}, {
"duration": 10000.0,
"texture": SubResource("AtlasTexture_eadb6")
}],
"loop": true,
"name": &"jump",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1fc80")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jibno")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cdgon")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_puvcw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rakh5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y5x6e")
}],
"loop": true,
"name": &"roll",
"speed": 18.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3q541")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sr66r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g3233")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yo2nf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ky10")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uc5vr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7wvpg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x11xb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0whdv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lkhyi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ppufv")
}],
"loop": true,
"name": &"run",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pa0s6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_arfus")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s5dpo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fjnys")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cvgy8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6r0c2")
}],
"loop": true,
"name": &"shoot",
"speed": 18.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_ajlng"]
atlas = ExtResource("6_ea6en")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ftist"]
atlas = ExtResource("7_3q541")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_v75go"]
atlas = ExtResource("7_3q541")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_y6xl4"]
atlas = ExtResource("7_3q541")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hmc4x"]
atlas = ExtResource("7_3q541")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jbl0r"]
atlas = ExtResource("7_3q541")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7le06"]
atlas = ExtResource("7_3q541")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1v01i"]
atlas = ExtResource("7_3q541")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_e6ey4"]
atlas = ExtResource("7_3q541")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_damci"]
atlas = ExtResource("7_3q541")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ih0y"]
atlas = ExtResource("7_3q541")
region = Rect2(576, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_v86og"]
atlas = ExtResource("7_3q541")
region = Rect2(640, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cjaet"]
atlas = ExtResource("6_ea6en")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_15hyo"]
atlas = ExtResource("6_ea6en")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0rof6"]
atlas = ExtResource("6_ea6en")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mexp8"]
atlas = ExtResource("6_ea6en")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_j6r15"]
atlas = ExtResource("6_ea6en")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4nl1j"]
atlas = ExtResource("6_ea6en")
region = Rect2(320, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_2qxdb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ajlng")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ftist")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v75go")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y6xl4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hmc4x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jbl0r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7le06")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1v01i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e6ey4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_damci")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ih0y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v86og")
}],
"loop": true,
"name": &"run",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cjaet")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_15hyo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0rof6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mexp8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j6r15")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4nl1j")
}],
"loop": true,
"name": &"shoot",
"speed": 18.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0e48y"]
size = Vector2(15, 24.1225)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xwiga"]
size = Vector2(52, 25)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uuggy"]
size = Vector2(20, 26)

[node name="Player2" type="CharacterBody2D" groups=["player"]]
collision_layer = 2
collision_mask = 3
script = ExtResource("1_6nwty")

[node name="AniPlayerSpr" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -4)
scale = Vector2(1.00837, 1.00484)
sprite_frames = SubResource("SpriteFrames_1fr6y")
animation = &"roll"
frame_progress = 0.904729

[node name="GunPoint" type="Marker2D" parent="AniPlayerSpr"]
position = Vector2(13.8838, -1.19209e-07)
scale = Vector2(0.991699, 0.995183)

[node name="Revolver_Sprite" type="AnimatedSprite2D" parent="."]
position = Vector2(20, -18)
sprite_frames = SubResource("SpriteFrames_2qxdb")
animation = &"shoot"
frame_progress = 0.0713576

[node name="P1_CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 0.0612502)
shape = SubResource("RectangleShape2D_0e48y")

[node name="pickup_range" type="Area2D" parent="."]
visible = false
collision_layer = 128
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="pickup_range"]
position = Vector2(7, 0)
shape = SubResource("RectangleShape2D_xwiga")

[node name="gun_tip" type="Node2D" parent="."]
position = Vector2(16, -4)

[node name="Hurtbox" type="Area2D" parent="." groups=["Player1Hurtbox"]]
visible = false
collision_layer = 64
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource("RectangleShape2D_uuggy")

[node name="P1_Roll_Timer" type="Timer" parent="."]
one_shot = true

[node name="P1_Roll_Cooldown_Timer" type="Timer" parent="."]

[node name="P1_Jump_Animation_Start_Timer" type="Timer" parent="."]
wait_time = 0.2

[node name="P1_Revolver_Firerate_Timer" type="Timer" parent="."]

[node name="revolver_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_tr25n")
volume_db = -6.315

[node name="running_sound" parent="." instance=ExtResource("10_d3ngm")]

[node name="death_sound" parent="." instance=ExtResource("11_woajj")]

[node name="pickup_gun_sound" parent="." instance=ExtResource("12_felgn")]

[node name="drop_gun_sound" parent="." instance=ExtResource("13_486fw")]

[node name="jump_sound" parent="." instance=ExtResource("14_6bhsc")]

[node name="roll_sound" parent="." instance=ExtResource("15_sr66r")]

[node name="slide_sound" parent="." instance=ExtResource("16_g3233")]

[connection signal="area_entered" from="pickup_range" to="." method="_on_pickup_range_area_entered"]
[connection signal="area_exited" from="pickup_range" to="." method="_on_pickup_range_area_exited"]
[connection signal="timeout" from="P1_Roll_Timer" to="." method="_on_p_1_roll_timer_timeout"]
[connection signal="timeout" from="P1_Roll_Cooldown_Timer" to="." method="_on_p_1_roll_cooldown_timer_timeout"]
[connection signal="timeout" from="P1_Revolver_Firerate_Timer" to="." method="_on_p_1_revolver_firerate_timer_timeout"]
