[gd_scene load_steps=58 format=3 uid="uid://cltdh4fw2k5dg"]

[ext_resource type="Script" uid="uid://bb2ufopx6shlm" path="res://Scripts/PlayerScript.gd" id="1_kysgo"]
[ext_resource type="Texture2D" uid="uid://c8u2dx18coteg" path="res://Images/Ocelot/jump/Ocelot-jump.png" id="3_0hojf"]
[ext_resource type="Texture2D" uid="uid://dia1pqfw0g2vx" path="res://Images/SpriteIdle1-Sheet.png" id="3_fdj68"]
[ext_resource type="Texture2D" uid="uid://b1xqitjb6j0yf" path="res://Images/Ocelot/jump/Ocelot-Dash.png" id="4_jintr"]
[ext_resource type="Texture2D" uid="uid://jcs7rr44liia" path="res://Images/Ocelot/Run_Animation_Skeleton_-_Main-Sheet.png" id="5_0hojf"]
[ext_resource type="Texture2D" uid="uid://b0kh1mt3hd8pn" path="res://Images/Guns/Revolver-Firing.png" id="7_0hojf"]
[ext_resource type="AudioStream" uid="uid://c3quiiboppqsr" path="res://Sounds/gun_shot_1.wav" id="7_xo4t5"]
[ext_resource type="Texture2D" uid="uid://cq4igk4noikq5" path="res://Images/Guns/Revolver Run animation aligned fixed.png" id="8_jintr"]
[ext_resource type="PackedScene" uid="uid://cbwm7trydl1lk" path="res://Scenes/Sounds/running_sound.tscn" id="9_f41m3"]
[ext_resource type="AudioStream" uid="uid://be4no2moypgtf" path="res://Sounds/Death sound.wav" id="10_5eook"]
[ext_resource type="AudioStream" uid="uid://cx5m5dilgwgrr" path="res://Sounds/drop gun.wav" id="11_djtuv"]
[ext_resource type="AudioStream" uid="uid://ca3kgtw2ipxxy" path="res://Sounds/pickup gun.wav" id="12_mobiq"]
[ext_resource type="AudioStream" uid="uid://b5vl6kppix6ii" path="res://Sounds/Jump sound.wav" id="13_fjyyx"]
[ext_resource type="AudioStream" uid="uid://bgl2tfge5q7jl" path="res://Sounds/slide sound.wav" id="14_fpkqk"]

[sub_resource type="AtlasTexture" id="AtlasTexture_tr25n"]
atlas = ExtResource("3_fdj68")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h6nhu"]
atlas = ExtResource("3_0hojf")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i8kkv"]
atlas = ExtResource("3_0hojf")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_edhf0"]
atlas = ExtResource("3_0hojf")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_od803"]
atlas = ExtResource("3_0hojf")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i6njm"]
atlas = ExtResource("4_jintr")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qhis0"]
atlas = ExtResource("4_jintr")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2k4np"]
atlas = ExtResource("4_jintr")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_l6dpw"]
atlas = ExtResource("4_jintr")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jintr"]
atlas = ExtResource("5_0hojf")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f41m3"]
atlas = ExtResource("5_0hojf")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fhdsy"]
atlas = ExtResource("5_0hojf")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_eq66n"]
atlas = ExtResource("5_0hojf")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ov245"]
atlas = ExtResource("5_0hojf")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j1qel"]
atlas = ExtResource("5_0hojf")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5eook"]
atlas = ExtResource("5_0hojf")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_djtuv"]
atlas = ExtResource("5_0hojf")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mobiq"]
atlas = ExtResource("5_0hojf")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fjyyx"]
atlas = ExtResource("5_0hojf")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fpkqk"]
atlas = ExtResource("5_0hojf")
region = Rect2(320, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_1fr6y"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tr25n")
}],
"loop": true,
"name": &"idle",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h6nhu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i8kkv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_edhf0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_od803")
}],
"loop": true,
"name": &"jump",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i6njm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qhis0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2k4np")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l6dpw")
}],
"loop": true,
"name": &"roll",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jintr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f41m3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fhdsy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eq66n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ov245")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j1qel")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5eook")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_djtuv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mobiq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fjyyx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fpkqk")
}],
"loop": true,
"name": &"run",
"speed": 12.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0e48y"]
size = Vector2(15, 24.1225)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xwiga"]
size = Vector2(52, 25)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uuggy"]
size = Vector2(20, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_ajlng"]
atlas = ExtResource("7_0hojf")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ftist"]
atlas = ExtResource("8_jintr")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_v75go"]
atlas = ExtResource("8_jintr")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_y6xl4"]
atlas = ExtResource("8_jintr")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hmc4x"]
atlas = ExtResource("8_jintr")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jbl0r"]
atlas = ExtResource("8_jintr")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7le06"]
atlas = ExtResource("8_jintr")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1v01i"]
atlas = ExtResource("8_jintr")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_e6ey4"]
atlas = ExtResource("8_jintr")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_damci"]
atlas = ExtResource("8_jintr")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ih0y"]
atlas = ExtResource("8_jintr")
region = Rect2(576, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_v86og"]
atlas = ExtResource("8_jintr")
region = Rect2(640, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cjaet"]
atlas = ExtResource("7_0hojf")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_15hyo"]
atlas = ExtResource("7_0hojf")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0rof6"]
atlas = ExtResource("7_0hojf")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mexp8"]
atlas = ExtResource("7_0hojf")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_j6r15"]
atlas = ExtResource("7_0hojf")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4nl1j"]
atlas = ExtResource("7_0hojf")
region = Rect2(320, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_f41m3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ajlng")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ftist")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v75go")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y6xl4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hmc4x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jbl0r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7le06")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1v01i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e6ey4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_damci")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ih0y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v86og")
}],
"loop": true,
"name": &"run",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cjaet")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_15hyo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0rof6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mexp8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j6r15")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4nl1j")
}],
"loop": true,
"name": &"shoot",
"speed": 18.0
}]

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_layer = 2
collision_mask = 3
script = ExtResource("1_kysgo")
player_id = "P2"

[node name="AniPlayerSpr" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -4)
scale = Vector2(1.00837, 1.00484)
sprite_frames = SubResource("SpriteFrames_1fr6y")
animation = &"roll"

[node name="GunPoint" type="Marker2D" parent="AniPlayerSpr"]
position = Vector2(9.91699, 8.95665)
scale = Vector2(0.991699, 0.995183)

[node name="P2_CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 0.0612502)
shape = SubResource("RectangleShape2D_0e48y")

[node name="pickup_range" type="Area2D" parent="."]
collision_layer = 128
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="pickup_range"]
position = Vector2(7, 0)
shape = SubResource("RectangleShape2D_xwiga")

[node name="gun_tip" type="Node2D" parent="."]
position = Vector2(10, -6)

[node name="Hurtbox" type="Area2D" parent="." groups=["Player1Hurtbox"]]
collision_layer = 64
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource("RectangleShape2D_uuggy")

[node name="revolver_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_xo4t5")
volume_db = -6.315

[node name="P2_Roll_Timer" type="Timer" parent="."]
one_shot = true

[node name="P2_Roll_Cooldown_Timer" type="Timer" parent="."]

[node name="P2_Jump_Animation_Start_Timer" type="Timer" parent="."]
wait_time = 0.2

[node name="P2_Revolver_Firerate_Timer" type="Timer" parent="."]

[node name="Revolver_Sprite" type="AnimatedSprite2D" parent="."]
position = Vector2(20, -18)
sprite_frames = SubResource("SpriteFrames_f41m3")
animation = &"shoot"

[node name="running_sound" parent="." instance=ExtResource("9_f41m3")]

[node name="death_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_5eook")

[node name="drop_gun_sound" type="AudioStreamPlayer2D" parent="."]
position = Vector2(0, -4)
scale = Vector2(1.00837, 1.00484)
stream = ExtResource("11_djtuv")

[node name="pickup_gun_sound" type="AudioStreamPlayer2D" parent="."]
position = Vector2(0, -4)
scale = Vector2(1.00837, 1.00484)
stream = ExtResource("12_mobiq")

[node name="jump_sound" type="AudioStreamPlayer2D" parent="."]
position = Vector2(0, -4)
scale = Vector2(1.00837, 1.00484)
stream = ExtResource("13_fjyyx")

[node name="slide_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("14_fpkqk")

[connection signal="area_entered" from="pickup_range" to="." method="_on_pickup_range_area_entered"]
[connection signal="area_exited" from="pickup_range" to="." method="_on_pickup_range_area_exited"]
[connection signal="timeout" from="P2_Roll_Timer" to="." method="_on_p_2_roll_timer_timeout"]
[connection signal="timeout" from="P2_Roll_Cooldown_Timer" to="." method="_on_p_2_roll_cooldown_timer_timeout"]
[connection signal="timeout" from="P2_Revolver_Firerate_Timer" to="." method="_on_p_2_revolver_firerate_timer_timeout"]
